Updated controllers