@@ -3,14 +3,12 @@ import com.example.demo.dto.UserLoginRequest;
 import com.example.demo.entity.User;
 import com.example.demo.repository.UserRepository;
 import org.springframework.http.HttpStatus;
-import java.util.UUID;
-import java.util.Collections;
+
+import java.util.*;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.beans.factory.annotation.Autowired;
-
-import java.util.List;
-import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/user")
@@ -45,22 +43,22 @@ public class UserController {
                 .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).body(null));
     }
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody UserLoginRequest request) {
-        System.out.println("Попытка входа: " + request.getEmail());
+    public ResponseEntity<Map<String, String>> login(@RequestBody UserLoginRequest request) {
         Optional<User> user = userRepository.findByEmail(request.getEmail());
 
         if (user.isEmpty()) {
-            System.out.println("Пользователь не найден");
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Пользователь не найден");
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", "Пользователь не найден"));
         }
 
         if (!user.get().getPassword().equals(request.getPassword())) {
-            System.out.println("Неверный пароль");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Неверный пароль");
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", "Неверный пароль"));
         }
 
-        String token = UUID.randomUUID().toString(); // Генерируем токен
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        String token = UUID.randomUUID().toString();
+        String role = user.get().getRole(); // Получаем роль пользователя
+
+        return ResponseEntity.ok(Map.of("token", token, "role", role)); // Отправляем роль в ответе
     }
+
 
 }
